--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -912,6 +912,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.5 成本函数\n",
+    "\n",
+    "在实现后面的反向传播之前，我们需要先计算成本，从而确保模型确实在学习。\n",
+    "\n",
+    "**练习**：使用下面的公式计算交叉熵成本 $J$：$$-\\frac{1}{m} \\sum\\limits_{i = 1}^{m} (y^{(i)}\\log\\left(a^{[L] (i)}\\right) + (1-y^{(i)})\\log\\left(1- a^{[L](i)}\\right)) \\tag{7}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: compute_cost\n",
+    "\n",
+    "def compute_cost(AL, Y):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function defined by equation (7).\n",
+    "\n",
+    "    Arguments:\n",
+    "    AL -- probability vector corresponding to your label predictions, shape (1, number of examples)\n",
+    "    Y -- true \"label\" vector (for example: containing 0 if non-cat, 1 if cat), shape (1, number of examples)\n",
+    "\n",
+    "    Returns:\n",
+    "    cost -- cross-entropy cost\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = Y.shape[1]\n",
+    "\n",
+    "    # Compute loss from aL and y.\n",
+    "    ### START CODE HERE ### (≈ 1 lines of code)\n",
+    "    cost = -np.mean(Y * np.log(AL) + (1 - Y) * np.log(1 - AL))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    cost = np.squeeze(cost)      # To make sure your cost's shape is what we expect (e.g. this turns [[17]] into 17).\n",
+    "    assert(cost.shape == ())\n",
+    "    \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost = 0.414931599615\n"
+     ]
+    }
+   ],
+   "source": [
+    "Y, AL = compute_cost_test_case()\n",
+    "\n",
+    "print(\"cost = \" + str(compute_cost(AL, Y)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "\n",
+    "    <tr>\n",
+    "    <td>**cost** </td>\n",
+    "    <td> 0.41493159961539694</td> \n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
