--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -994,6 +994,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.6 反向传播模块\n",
+    "\n",
+    "和前向传播一样，接下来我们需要首先实现反向传播的一些辅助函数。回顾一下：反向传播的目的是计算损失函数对参数的梯度，从而用来更新参数。\n",
+    "\n",
+    "**回顾**: \n",
+    "<img src=\"img/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n",
+    "<caption><center> **图 3** : Forward and Backward propagation for *LINEAR->RELU->LINEAR->SIGMOID* <br> *紫色的方块表示前向传播，红色的模块表示反向传播*  </center></caption>\n",
+    "\n",
+    "<!-- \n",
+    "For those of you who are expert in calculus (you don't need to be to do this assignment), the chain rule of calculus can be used to derive the derivative of the loss $\\mathcal{L}$ with respect to $z^{[1]}$ in a 2-layer network as follows:\n",
+    "\n",
+    "$$\\frac{d \\mathcal{L}(a^{[2]},y)}{{dz^{[1]}}} = \\frac{d\\mathcal{L}(a^{[2]},y)}{{da^{[2]}}}\\frac{{da^{[2]}}}{{dz^{[2]}}}\\frac{{dz^{[2]}}}{{da^{[1]}}}\\frac{{da^{[1]}}}{{dz^{[1]}}} \\tag{8} $$\n",
+    "\n",
+    "In order to calculate the gradient $dW^{[1]} = \\frac{\\partial L}{\\partial W^{[1]}}$, you use the previous chain rule and you do $dW^{[1]} = dz^{[1]} \\times \\frac{\\partial z^{[1]} }{\\partial W^{[1]}}$. During the backpropagation, at each step you multiply your current gradient by the gradient corresponding to the specific layer to get the gradient you wanted.\n",
+    "\n",
+    "Equivalently, in order to calculate the gradient $db^{[1]} = \\frac{\\partial L}{\\partial b^{[1]}}$, you use the previous chain rule and you do $db^{[1]} = dz^{[1]} \\times \\frac{\\partial z^{[1]} }{\\partial b^{[1]}}$.\n",
+    "\n",
+    "This is why we talk about **backpropagation**.\n",
+    "!-->\n",
+    "\n",
+    "类似前向传播，反向传播的过程也会分解为三个步骤：\n",
+    "- LINEAR backward\n",
+    "- LINEAR -> ACTIVATION 其中 ACTIVATION 模块计算了ReLU或者sigmoid函数的导数\n",
+    "- [LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID backward 整个反向传播过程"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.6.1 线性反向\n",
+    "\n",
+    "对于第 $l$ 层，线性的部分为：$Z^{[l]} = W^{[l]} A^{[l-1]} + b^{[l]}$ （之后是激活）\n",
+    "\n",
+    "假设我们已经计算出了导数 $dZ^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial Z^{[l]}}$。接下来我们需要 $(dW^{[l]}, db^{[l]} dA^{[l-1]})$.\n",
+    "\n",
+    "<img src=\"img/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
+    "<caption><center> **图 4** </center></caption>\n",
+    "\n",
+    "$(dW^{[l]}, db^{[l]}, dA^{[l]})$ 这三个输出可以根据输入 $dZ^{[l]}$ 计算而得。下面是计算公式：\n",
+    "$$ dW^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial W^{[l]}} = \\frac{1}{m} dZ^{[l]} A^{[l-1] T} \\tag{8}$$\n",
+    "$$ db^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial b^{[l]}} = \\frac{1}{m} \\sum_{i = 1}^{m} dZ^{[l](i)}\\tag{9}$$\n",
+    "$$ dA^{[l-1]} = \\frac{\\partial \\mathcal{L} }{\\partial A^{[l-1]}} = W^{[l] T} dZ^{[l]} \\tag{10}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**练习**：根据上面的三个公式实现 linear_backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: linear_backward\n",
+    "\n",
+    "def linear_backward(dZ, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the linear portion of backward propagation for a single layer (layer l)\n",
+    "\n",
+    "    Arguments:\n",
+    "    dZ -- Gradient of the cost with respect to the linear output (of current layer l)\n",
+    "    cache -- tuple of values (A_prev, W, b) coming from the forward propagation in the current layer\n",
+    "\n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "\n",
+    "    ### START CODE HERE ### (≈ 3 lines of code)\n",
+    "    dW = np.dot(dZ, A_prev.T) / m\n",
+    "    db = np.mean(dZ, axis=1, keepdims=True)\n",
+    "    dA_prev = np.dot(W.T, dZ)\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert (dA_prev.shape == A_prev.shape)\n",
+    "    assert (dW.shape == W.shape)\n",
+    "    assert (db.shape == b.shape)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA_prev = [[ 0.51822968 -0.19517421]\n",
+      " [-0.40506361  0.15255393]\n",
+      " [ 2.37496825 -0.89445391]]\n",
+      "dW = [[-0.10076895  1.40685096  1.64992505]]\n",
+      "db = [[ 0.50629448]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set up some test inputs\n",
+    "dZ, linear_cache = linear_backward_test_case()\n",
+    "\n",
+    "dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "print (\"dA_prev = \"+ str(dA_prev))\n",
+    "print (\"dW = \" + str(dW))\n",
+    "print (\"db = \" + str(db))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**: \n",
+    "\n",
+    "<table style=\"width:90%\">\n",
+    "  <tr>\n",
+    "    <td> **dA_prev** </td>\n",
+    "    <td > [[ 0.51822968 -0.19517421]\n",
+    " [-0.40506361  0.15255393]\n",
+    " [ 2.37496825 -0.89445391]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "        <td> **dW** </td>\n",
+    "        <td > [[-0.10076895  1.40685096  1.64992505]] </td> \n",
+    "    </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "        <td> **db** </td>\n",
+    "        <td> [[ 0.50629448]] </td> \n",
+    "    </tr> \n",
+    "    \n",
+    "</table>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
