Linear-Activation backward

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -1027,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9.6.1 线性反向\n",
+    "#### 9.6.1 线性反向传播\n",
     "\n",
     "对于第 $l$ 层，线性的部分为：$Z^{[l]} = W^{[l]} A^{[l-1]} + b^{[l]}$ （之后是激活）\n",
     "\n",
@@ -1141,6 +1141,172 @@
     "        <td> [[ 0.50629448]] </td> \n",
     "    </tr> \n",
     "    \n",
+    "</table>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.6.2 线性-激活 反向传播\n",
+    "\n",
+    "接下来，我们需要合并两个辅助函数：**`linear_backward`** 以及反向函数的激活层 **`linear_activation_backward`**. \n",
+    "\n",
+    "为了帮助实现 `linear_activation_backward`，系统已经提供了两个反向函数：\n",
+    "- **`sigmoid_backward`**: 实现了针对SIGMOID神经元的反向传播，可以按以下方法调用：\n",
+    "\n",
+    "```python\n",
+    "dZ = sigmoid_backward(dA, activation_cache)\n",
+    "```\n",
+    "\n",
+    "- **`relu_backward`**: 实现了针对RELU神经元的反向传播，可以按以下方法调用：\n",
+    "\n",
+    "```python\n",
+    "dZ = relu_backward(dA, activation_cache)\n",
+    "```\n",
+    "\n",
+    "如果 $g(.)$ 是激活函数，`sigmoid_backward` 和 `relu_backward` 计算了 $$dZ^{[l]} = dA^{[l]} * g'(Z^{[l]}) \\tag{11}$$.  \n",
+    "\n",
+    "**练习**: 实现 *LINEAR->ACTIVATION* 层的反向传播"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: linear_activation_backward\n",
+    "\n",
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient for current layer l \n",
+    "    cache -- tuple of values (linear_cache, activation_cache) we store for computing backward propagation efficiently\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        ### END CODE HERE ###\n",
+    "        \n",
+    "    elif activation == \"sigmoid\":\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        ### END CODE HERE ###\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid:\n",
+      "dA_prev = [[ 0.11017994  0.01105339]\n",
+      " [ 0.09466817  0.00949723]\n",
+      " [-0.05743092 -0.00576154]]\n",
+      "dW = [[ 0.10266786  0.09778551 -0.01968084]]\n",
+      "db = [[-0.05729622]]\n",
+      "\n",
+      "relu:\n",
+      "dA_prev = [[ 0.44090989  0.        ]\n",
+      " [ 0.37883606  0.        ]\n",
+      " [-0.2298228   0.        ]]\n",
+      "dW = [[ 0.44513824  0.37371418 -0.10478989]]\n",
+      "db = [[-0.20837892]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "AL, linear_activation_cache = linear_activation_backward_test_case()\n",
+    "\n",
+    "dA_prev, dW, db = linear_activation_backward(AL, linear_activation_cache, activation = \"sigmoid\")\n",
+    "print (\"sigmoid:\")\n",
+    "print (\"dA_prev = \"+ str(dA_prev))\n",
+    "print (\"dW = \" + str(dW))\n",
+    "print (\"db = \" + str(db) + \"\\n\")\n",
+    "\n",
+    "dA_prev, dW, db = linear_activation_backward(AL, linear_activation_cache, activation = \"relu\")\n",
+    "print (\"relu:\")\n",
+    "print (\"dA_prev = \"+ str(dA_prev))\n",
+    "print (\"dW = \" + str(dW))\n",
+    "print (\"db = \" + str(db))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sigmoid预期输出：**\n",
+    "\n",
+    "<table style=\"width:100%\">\n",
+    "  <tr>\n",
+    "    <td > dA_prev </td> \n",
+    "           <td >[[ 0.11017994  0.01105339]\n",
+    " [ 0.09466817  0.00949723]\n",
+    " [-0.05743092 -0.00576154]] </td> \n",
+    "\n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > dW </td> \n",
+    "           <td > [[ 0.10266786  0.09778551 -0.01968084]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > db </td> \n",
+    "           <td > [[-0.05729622]] </td> \n",
+    "  </tr> \n",
+    "</table>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**relu预期输出：**\n",
+    "\n",
+    "<table style=\"width:100%\">\n",
+    "  <tr>\n",
+    "    <td > dA_prev </td> \n",
+    "           <td > [[ 0.44090989  0.        ]\n",
+    " [ 0.37883606  0.        ]\n",
+    " [-0.2298228   0.        ]] </td> \n",
+    "\n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > dW </td> \n",
+    "           <td > [[ 0.44513824  0.37371418 -0.10478989]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > db </td> \n",
+    "           <td > [[-0.20837892]] </td> \n",
+    "  </tr> \n",
     "</table>\n",
     "\n"
    ]
