--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -1312,6 +1312,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.6.3 L层模型的反向传播\n",
+    "\n",
+    "接下来我们需要实现整个网络的反向传播函数。在实现 `L_model_forward` 函数时，每一次迭代，我们都保存在了 (X,W,b, 和 z) 到缓存中。而在反向传播模块中，我们将会用到这些变量来计算梯度。因此，在 `L_model_backward` 函数中，我们会从第 $L$ 层开始使同时使用缓存反向迭代地计算所有隐藏层。\n",
+    "\n",
+    "<img src=\"img/mn_backward.png\" style=\"width:450px;height:300px;\">\n",
+    "<caption><center>  **图 5** : Backward pass  </center></caption>\n",
+    "\n",
+    "** 反向传播初始化 **：\n",
+    "要对整个网络进行反向传播计算，首先需要输出结果\n",
+    "$A^{[L]} = \\sigma(Z^{[L]})$。代码中因此需要计算 `dAL` $= \\frac{\\partial \\mathcal{L}}{\\partial A^{[L]}}$，可以使用下面的公式：\n",
+    "```python\n",
+    "dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL)) # derivative of cost with respect to AL\n",
+    "```\n",
+    "\n",
+    "之后就可以根据 `dAL` 这个梯度一直反向计算。如图 5 所示，`dAL` 会作为输入提交给之前实现好的 LINEAR->SIGMOID 函数。之后就可以使用 `for` 循环迭代调用 LINEAR->RELU 计算其它所有层。每次计算出来的 dA, dW 和 db 请保存在 grads 字典中：\n",
+    "\n",
+    "$$grads[\"dW\" + str(l)] = dW^{[l]}\\tag{15} $$\n",
+    "\n",
+    "比如，对于 $l=3$ $dW^{[3]}$ 会保存为 `grads[\"dW3\"]`.\n",
+    "\n",
+    "**练习**: 实现反向传播 *[LINEAR->RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID* model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: L_model_backward\n",
+    "\n",
+    "def L_model_backward(AL, Y, caches):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    \n",
+    "    Arguments:\n",
+    "    AL -- probability vector, output of the forward propagation (L_model_forward())\n",
+    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() with \"relu\" (it's caches[l], for l in range(L-1) i.e l = 0...L-2)\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (it's caches[L-1])\n",
+    "    \n",
+    "    Returns:\n",
+    "    grads -- A dictionary with the gradients\n",
+    "             grads[\"dA\" + str(l)] = ... \n",
+    "             grads[\"dW\" + str(l)] = ...\n",
+    "             grads[\"db\" + str(l)] = ... \n",
+    "    \"\"\"\n",
+    "    grads = {}\n",
+    "    L = len(caches) # the number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
+    "    \n",
+    "    # Initializing the backpropagation\n",
+    "    ### START CODE HERE ### (1 line of code)\n",
+    "    dAL = -(np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"AL, Y, caches\". Outputs: \"grads[\"dAL\"], grads[\"dWL\"], grads[\"dbL\"]\n",
+    "    ### START CODE HERE ### (approx. 2 lines)\n",
+    "    current_cache = caches[L-1]\n",
+    "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, 'sigmoid')\n",
+    "    grads[\"dA\" + str(L+1)] = dAL\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    for l in reversed(range(L-1)):\n",
+    "        # lth layer: (RELU -> LINEAR) gradients.\n",
+    "        # Inputs: \"grads[\"dA\" + str(l + 2)], caches\". Outputs: \"grads[\"dA\" + str(l + 1)] , grads[\"dW\" + str(l + 1)] , grads[\"db\" + str(l + 1)] \n",
+    "        ### START CODE HERE ### (approx. 5 lines)\n",
+    "        current_cache = caches[l]\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 2)], current_cache, 'relu')\n",
+    "        grads[\"dA\" + str(l + 1)] = dA_prev_temp\n",
+    "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
+    "        grads[\"db\" + str(l + 1)] = db_temp\n",
+    "        ### END CODE HERE ###\n",
+    "\n",
+    "    return grads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dW1 = [[ 0.41010002  0.07807203  0.13798444  0.10502167]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.05283652  0.01005865  0.01777766  0.0135308 ]]\n",
+      "db1 = [[-0.22007063]\n",
+      " [ 0.        ]\n",
+      " [-0.02835349]]\n",
+      "dA1 = [[ 0.12913162 -0.44014127]\n",
+      " [-0.14175655  0.48317296]\n",
+      " [ 0.01663708 -0.05670698]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "AL, Y_assess, caches = L_model_backward_test_case()\n",
+    "grads = L_model_backward(AL, Y_assess, caches)\n",
+    "print_grads(grads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**\n",
+    "\n",
+    "<table style=\"width:60%\">\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td > dW1 </td> \n",
+    "           <td > [[ 0.41010002  0.07807203  0.13798444  0.10502167]\n",
+    " [ 0.          0.          0.          0.        ]\n",
+    " [ 0.05283652  0.01005865  0.01777766  0.0135308 ]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > db1 </td> \n",
+    "           <td > [[-0.22007063]\n",
+    " [ 0.        ]\n",
+    " [-0.02835349]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "  <tr>\n",
+    "  <td > dA1 </td> \n",
+    "           <td > [[ 0.12913162 -0.44014127]\n",
+    " [-0.14175655  0.48317296]\n",
+    " [ 0.01663708 -0.05670698]] </td> \n",
+    "\n",
+    "  </tr> \n",
+    "</table>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
