Update Parameters and Conclusion

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -1458,6 +1458,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.6.4 更新参数\n",
+    "\n",
+    "使用梯度下降更新参数 \n",
+    "\n",
+    "$$ W^{[l]} = W^{[l]} - \\alpha \\text{ } dW^{[l]} \\tag{16}$$\n",
+    "$$ b^{[l]} = b^{[l]} - \\alpha \\text{ } db^{[l]} \\tag{17}$$\n",
+    "\n",
+    "其中 $\\alpha$ 是学习速率。在计算好更新完成的参数后，将其存储在参数字典中。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**练习**：实现 `update_parameters()` ，使用梯度下降对参数进行更新。\n",
+    "\n",
+    "**指令**:\n",
+    "对每一层 $l = 1, 2, ..., L$ 的参数 $W^{[l]}$ and $b^{[l]}$ ，使用梯度下降进行更新。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: update_parameters\n",
+    "\n",
+    "def update_parameters(parameters, grads, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Update parameters using gradient descent\n",
+    "    \n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing your parameters \n",
+    "    grads -- python dictionary containing your gradients, output of L_model_backward\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your updated parameters \n",
+    "                  parameters[\"W\" + str(l)] = ... \n",
+    "                  parameters[\"b\" + str(l)] = ...\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    L = len(parameters) // 2 # number of layers in the neural network\n",
+    "\n",
+    "    # Update rule for each parameter. Use a for loop.\n",
+    "    ### START CODE HERE ### (≈ 3 lines of code)\n",
+    "    for l in range(1, L+1):\n",
+    "        parameters[\"W\" + str(l)] -= learning_rate * grads[\"dW\" + str(l)]\n",
+    "        parameters[\"b\" + str(l)] -= learning_rate * grads[\"db\" + str(l)]\n",
+    "    ### END CODE HERE ###\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[-0.59562069 -0.09991781 -2.14584584  1.82662008]\n",
+      " [-1.76569676 -0.80627147  0.51115557 -1.18258802]\n",
+      " [-1.0535704  -0.86128581  0.68284052  2.20374577]]\n",
+      "b1 = [[-0.04659241]\n",
+      " [-1.28888275]\n",
+      " [ 0.53405496]]\n",
+      "W2 = [[-0.55569196  0.0354055   1.32964895]]\n",
+      "b2 = [[-0.84610769]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters, grads = update_parameters_test_case()\n",
+    "parameters = update_parameters(parameters, grads, 0.1)\n",
+    "\n",
+    "print (\"W1 = \"+ str(parameters[\"W1\"]))\n",
+    "print (\"b1 = \"+ str(parameters[\"b1\"]))\n",
+    "print (\"W2 = \"+ str(parameters[\"W2\"]))\n",
+    "print (\"b2 = \"+ str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table style=\"width:100%\"> \n",
+    "    <tr>\n",
+    "    <td > W1 </td> \n",
+    "           <td > [[-0.59562069 -0.09991781 -2.14584584  1.82662008]\n",
+    " [-1.76569676 -0.80627147  0.51115557 -1.18258802]\n",
+    " [-1.0535704  -0.86128581  0.68284052  2.20374577]] </td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > b1 </td> \n",
+    "           <td > [[-0.04659241]\n",
+    " [-1.28888275]\n",
+    " [ 0.53405496]] </td> \n",
+    "  </tr> \n",
+    "  <tr>\n",
+    "    <td > W2 </td> \n",
+    "           <td > [[-0.55569196  0.0354055   1.32964895]]</td> \n",
+    "  </tr> \n",
+    "  \n",
+    "    <tr>\n",
+    "    <td > b2 </td> \n",
+    "           <td > [[-0.84610769]] </td> \n",
+    "  </tr> \n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.7 结论\n",
+    "\n",
+    "在实现了上面所有的辅助函数后，我们已经可以构建一个深度神经网络。\n",
+    "\n",
+    "在下一节中，我们将会把上面的函数组合起来，构建两个模型：\n",
+    "- 一个两层的神经网络\n",
+    "- 一个L层的神经网络\n",
+    "\n",
+    "同时我们会用着两个模型来对猫的图片进行分类！"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
