--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -170,7 +170,7 @@
     "- [numpy](www.numpy.org) 是Python生态圈中进行科学计算的基础包。\n",
     "- [matplotlib](http://matplotlib.org) 是Python生态圈中著名的绘图包。\n",
     "- dnn_utils 提供了一些辅助函数\n",
-    "- testCases 提供了一些测试用力，用来测试所写函数的准确性\n",
+    "- testCases 提供了一些测试用例，用来测试所写函数的准确性\n",
     "- np.random.seed(1) 用来保证随机函数调用结果的一致性。"
    ]
   },
@@ -1592,6 +1592,73 @@
     "- 一个L层的神经网络\n",
     "\n",
     "同时我们会用着两个模型来对猫的图片进行分类！"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 10. 深度神经网络猫的图片分类器\n",
+    "\n",
+    "接下来我们会用上面实现了的函数来构建一个深度神经网络，并将其用于猫vs非猫的图片分类。顺利的话，我们会发现这个分类器的准确率相比较逻辑回归会有大幅上升。\n",
+    "\n",
+    "**完成这个编程练习后，你将能够：**\n",
+    "- 构建一个深度神经网络，并将其应用于监督学习问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.1 三方包\n",
+    "\n",
+    "首先，运行下面的代码块，来引入在这个编程练习中所需要的包。 \n",
+    "- [numpy](www.numpy.org) 是Python生态圈中进行科学计算的基础包。\n",
+    "- [matplotlib](http://matplotlib.org) 是Python生态圈中著名的绘图包。\n",
+    "- [h5py](http://www.h5py.org) 是和存储为H5文件的数据集进行交互的通用包。\n",
+    "- [PIL](http://www.pythonware.com/products/pil/) 和 [scipy](https://www.scipy.org/) 用来使用图片对模型进行测试。\n",
+    "- dnn_app_utils 提供了上面这个编程练习已经实现的函数\n",
+    "- testCases 提供了一些测试用例，用来测试所写函数的准确性\n",
+    "- np.random.seed(1) 用来保证随机函数调用结果的一致性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import numpy as np\n",
+    "import h5py\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy\n",
+    "from PIL import Image\n",
+    "from scipy import ndimage\n",
+    "from dnn_app_utils_v2 import *\n",
+    "\n",
+    "%matplotlib inline\n",
+    "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
+    "plt.rcParams['image.interpolation'] = 'nearest'\n",
+    "plt.rcParams['image.cmap'] = 'gray'\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "np.random.seed(1)"
    ]
   },
   {
