cat classifier model architecture

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -1804,6 +1804,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.3 模型的结构"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "我们会构建两个不同的模型：\n",
+    "- 一个两层的神经网络\n",
+    "- 一个L层的神经网络\n",
+    "\n",
+    "之后我们会比较两个模型的准确率，并测试不同的L值。\n",
+    "\n",
+    "#### 10.3.1 两层神经网络\n",
+    "\n",
+    "<img src=\"img/2layerNN_kiank.png\" style=\"width:650px;height:400px;\">\n",
+    "<caption><center> <u>Figure 2</u>: 2-layer neural network. <br> The model can be summarized as: ***INPUT -> LINEAR -> RELU -> LINEAR -> SIGMOID -> OUTPUT***. </center></caption>\n",
+    "\n",
+    "<u>结构详解</u>:\n",
+    "- (64,64,3) 的图片输入会平展为一个 (12288,1) 的向量\n",
+    "- 对应的向量 $[x_0,x_1,...,x_{12287}]^T$ 会和权重矩阵相乘 $W^{[1]}$，权重矩阵的维度为 $(n^{[1]}, 12288)$\n",
+    "- 对上面的结果，加上截距项，并使用relu函数，获得对应的向量 $[a_0^{[1]}, a_1^{[1]},..., a_{n^{[1]}-1}^{[1]}]^T$.\n",
+    "- 重复同样的步骤\n",
+    "- 对结果向量乘以权重矩阵 $W^{[2]}$ 并加上截距\n",
+    "- 对最后的结果使用sigmoid函数。如果结果大于0.5，则将其分类为猫\n",
+    "\n",
+    "#### 10.3.2 L层深度神经网络\n",
+    "\n",
+    "It is hard to represent an L-layer deep neural network with the above representation. However, here is a simplified network representation:\n",
+    "\n",
+    "<img src=\"img/LlayerNN_kiank.png\" style=\"width:650px;height:400px;\">\n",
+    "<caption><center> <u>Figure 3</u>: L-layer neural network. <br> The model can be summarized as: ***[LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID***</center></caption>\n",
+    "\n",
+    "<u>结构详解</u>:\n",
+    "- (64,64,3) 的图片输入会平展为一个 (12288,1) 的向量\n",
+    "- 对应的向量 $[x_0,x_1,...,x_{12287}]^T$ 会和权重矩阵相乘 $W^{[1]}$ 之后加上截距项 $b^{[1]}$。这步的计算结果成为线性神经元\n",
+    "- 接下来，对线性神经元使用relu函数。根据模型的结构，这一步可以对不同的 $(W^{[l]}, b^{[l]})$ 重复多次\n",
+    "- 最后，对最终的线性单元使用sigmoid函数。如果结果大于0.5，则将其分类为猫\n",
+    "\n",
+    "#### 10.3.3 一般方法\n",
+    "\n",
+    "深度学习构建模型的过程如下：\n",
+    "    1. 初始化参数 / 定义超参\n",
+    "    2. 根据迭代次数进行循环：\n",
+    "        a. 前向传播\n",
+    "        b. 计算成本函数\n",
+    "        c. 反向传播\n",
+    "        d. 更新参数 (使用原参数以及反向传播产生的梯度值) \n",
+    "    4. 使用训练获得的参数来预测标签\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
