--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -29,6 +29,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.2 偏差、方差\n",
+    "\n",
+    "偏差和方差是机器学习中易学难精的一组概念，高级机器学习从业人员往往对其都有非常深刻的理解。\n",
+    "\n",
+    "在二维的情况下，偏差和方差的情况，可以比较容易地可视化展现出来：\n",
+    "\n",
+    "![Bias and Variance](img/Bias and Variance.png)\n",
+    "\n",
+    "而在高维的情况下，偏差和方差则需要借助一些指标来进行判断：\n",
+    "1)训练误差<开发误差 & 训练误差接近人类专家可以达到的水平：高方差；\n",
+    "2）训练误差约等于开发误差 & 二者都远高于人类专家可以达到的水平：高偏差；\n",
+    "3）训练误差<开发误差 & 训练误差远高于人类专家可以到达的水平（也就意味着开发误差离人类专家的水平差距更大）：高偏差 & 高方差；\n",
+    "4）训练误差约等于开发误差 & 二者都接近于人类专家可以达到的水平：低偏差 & 低方差。\n",
+    "\n",
+    "人类专家可以达到的误差水平，专业术语叫做**最优误差**或**贝叶斯误差**。在下面这个猫图片识别的例子里，我们认为最优误差约等于0。在这个前提下，会有图中的一些判定。（但是在某些实际问题中，比如用来识别的图片很模糊，可能很难确定最优误差大概是多少，那么具体的分析又会有不同；包括当训练集和开发集来自不同的分布，具体的分析也会有不一样；这些后面会介绍）\n",
+    "\n",
+    "![Bias and Variance Cat classification.png](img/Bias and Variance Cat classification.png)\n",
+    "\n",
+    "高方差、高偏差的情况意味着，分类器不仅没有学到训练集和开发集共同的模式，反而还受到了训练集噪声的影响，学到了不需要的模式。这种情况在高维数据的情况下也比较常见。\n",
+    "![High bias and high variance](img/High bias and high variance.png)\n",
+    "\n",
+    "在深度学习时代，一个与以往的不同是，**人们不再过多地谈论偏差方差权衡**，偏差和方差更多情况下变成了两个可以单独解决的问题，而不再经常遇到此消彼长的情况。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -39,6 +69,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
