Basic recipe for machine learning

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -53,9 +53,28 @@
     "![Bias and Variance Cat classification.png](img/Bias and Variance Cat classification.png)\n",
     "\n",
     "高方差、高偏差的情况意味着，分类器不仅没有学到训练集和开发集共同的模式，反而还受到了训练集噪声的影响，学到了不需要的模式。这种情况在高维数据的情况下也比较常见。\n",
-    "![High bias and high variance](img/High bias and high variance.png)\n",
+    "![High bias and high variance](img/High bias and high variance.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.3 机器学习配方\n",
     "\n",
-    "在深度学习时代，一个与以往的不同是，**人们不再过多地谈论偏差方差权衡**，偏差和方差更多情况下变成了两个可以单独解决的问题，而不再经常遇到此消彼长的情况。"
+    "在训练了一个初始模型后，你可以按照这个配方，来进行下面的诊断，并执行相应的修复步骤：\n",
+    "\n",
+    "1）通过训练集误差，判断是否存在高偏差问题，如果不存在，也即是说模型对训练拟合情况已经非常好，可以直接进入下一步，如果存在：a) 尝试更大的神经网络（更多的隐藏层，更多的神经元），这个策略几乎总是管用，除非这个问题的贝叶斯误差就很大，也就是说人类专家也无法很好地判断；b) 尝试更多的迭代次数，这个策略至少不会让模型变得更糟；c) 尝试其它的神经网络结构，这个策略可能有用，可能没有用。\n",
+    "\n",
+    "2）通过开发集误差，判断是否存在高方差问题，上面已经在训练集表现不错的模型，能否在开发集上也获得不错的泛化误差。如果存在：a) 尝试获得更多的数据，这个策略只会有正向作用；b) 使用正则化策略，控制过拟合。c) 和上面一样，尝试其它的神经网络结构，这个策略可能有用，可能没有用。\n",
+    "\n",
+    "3）1和2的步骤可能会迭代多次，直到找到一个模型，在训练集和开发集的表现都很好，也即同时具备低偏差和低方差。\n",
+    "\n",
+    "在深度学习时代，一个与以往的不同是，**人们不再过多地谈论偏差方差权衡**，在前深度学习时代，我们没有太多的工具可以单独减少偏差而不引起方差上升，或单独减少方差而不引起偏差上升。而深度学习时代/大数据时代，偏差（只要你可以训练更大的神经网络，并合理地进行正则化）和方差（只要你可以获得更多的数据）更多情况下变成了两个可以单独解决的问题，而不再经常遇到此消彼长的情况。\n",
+    "\n",
+    "![Basic recipe for machine learning](img/Basic recipe for machine learning.png)"
    ]
   },
   {
@@ -71,9 +90,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -85,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
