--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -78,6 +78,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 正则化神经网络\n",
+    "\n",
+    "### 2.1 正则化\n",
+    "\n",
+    "解决高方差/过拟合，最直接的办法就是正则化。相比于获取更多数据可能需要花费过高的成本，正则化简单可行。\n",
+    "\n",
+    "就逻辑回归的例子而言，正则化参数时，相比于高维的w，b通常可以省略掉。（是否省略对结果的影响不大）\n",
+    "\n",
+    "L1正则化的结果相比L2会更稀疏，意味着更多w的值会变为0。L1正则化使模型参数稀疏之后，有助于压缩模型，节省内存。但在实际操作中，这方面的提升不会特别大。所以L1正则化的使用频率一般不高，至少不太会是出于压缩模型的考虑。绝大多数情况下，人们还是使用L2正则化。\n",
+    "\n",
+    "引入正则化概念的同时，也会引入正则化系数 $\\lambda$，这是又一个需要调的超参。\n",
+    "\n",
+    "![Logistic regression regularization](img/Logistic regression regularization.png)\n",
+    "\n",
+    "而对于神经网络来说，成本函数里的正则项，是所有权重矩阵中所有元素的平方和。用线性代数的术语描述，每个矩阵所有元素的平方和，称为矩阵的Frobenius范数，而正则项就可以描述为所有权重矩阵的Frobenius范数之和。\n",
+    "\n",
+    "由于成本函数增加了正则项，计算梯度就也需要相应地增加正则项的梯度。由于下图里可以看到的变换，每次梯度迭代，权重矩阵都会首先变小（再按照没有正则化情况下的梯度进行更新），因此L2正则化，也称为**权重衰减 weight decay**。\n",
+    "\n",
+    "![Neural Network regularization](img/Neural Network regularization.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
