why regularization reduces overfitting

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -103,6 +103,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 为什么正则化可以减少过拟合\n",
+    "\n",
+    "1）$\\lambda$ 很大时，权重变小，极端情况下接近0，从消除了对应神经元的影响力，使得模型变得更简单。\n",
+    "\n",
+    "2）$\\lambda$ 很大时，权重变小，从而线性组合出来的 $Z$ 也会接近0。而以tanh激活函数为例，在输入接近为0的情况下，tanh函数的形状约等于线性函数。之前讨论过，如果每一层都是线性激活层，那么多复杂的神经网络都仅仅是线性函数。这样我们使用一个约等于线性函数的激活函数，模型也因此变得简单。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
