--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -114,6 +114,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Dropout正则化\n",
+    "\n",
+    "Dropout是针对神经网络的一种正则化技巧。在训练模型时，针对每一个训练样本，以一定概率随机将一些神经元的激活值置为0，进行正向和反向传播。不同的样本，随机取消的神经元不同。\n",
+    "\n",
+    "常用的Dropout正则化实现，是inverted dropout：\n",
+    "![implementing inverted dropout](img/implementing inverted dropout.png)\n",
+    "\n",
+    "注意到上面这个算法，训练时最终通过除以keep_prob这个参数进行了标准化。从而在开发/测试集上进行预测时，就不需要再另做改动，直接按照正常的流程正向传播即可。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
