--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -129,6 +129,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 了解Dropout\n",
+    "\n",
+    "Dropout的正则化解释：\n",
+    "\n",
+    "1）Dropout过程随机去掉了神经元，使整个神经网络变小，从而达到了正则化的目的。\n",
+    "\n",
+    "2）每个神经元，作为下一层的输入，都是可能由于Dropout而被取消的。这样下一层的神经元要发挥激活作用，就会有正向的激励，不过分依赖于单个神经元，而是将权重尽可能分散。\n",
+    "\n",
+    "另外一个实现细节是，keep_prob对于不同层来说，可以是不一样的。某些权重矩阵较大的层，由于更担心其过拟合，keep_prob的参数可以适当调小。输入层也可以设置dropout，但这个不常用。输出层通常keep_prob会设为1。对每一层都设置keep_prob值又有可能引入了过多的超参，所以有时也仅仅设置一个keep_prob值，然后指定哪些层使用dropout。\n",
+    "\n",
+    "计算机视觉问题中，由于图片的像素点极多，也就是特征太多，相比而言样本通常都不够多，这时Dropout正则化几乎是一个默认的技巧。而对于其它应用来说，请牢记Dropout是一个正则化技巧，只在过拟合，又无法获得更多数据时使用。\n",
+    "\n",
+    "在使用了Dropout之后，引发的一个问题是，之前成本函数 $J$ 不再是一个合理定义，用来衡量模型表现的指标。$J$ 未必会随着每次迭代都严格下降。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
