other regularization methods

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -148,6 +148,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5 其它正则化方法\n",
+    "\n",
+    "**样本生成 Data Augmentation**：比如对于计算机视觉问题，可以对图片进行水平翻转，从而获得新样本。也有随机旋转图片，然后再缩放生成新样本的方法。这些样本生成的方法，肯定不如全新的图片带来的效果好，但是可以节省收集新数据的成本。\n",
+    "\n",
+    "![Data augmentation](img/Data augmentation.png)\n",
+    "\n",
+    "**早停法 Early Stopping**：绘制训练误差和开发误差关于梯度下降迭代次数的曲线。在开发误差的最低点，提前结束迭代。提前结束迭代时得到的参数矩阵，通常Frobenius范数会处在一个适中的程度。早停法的一个弊端是，它将优化成本函数，和寻找超参控制过拟合两个过程耦合在了一起。一般情况下，我们会在某些超参空间内搜索，拿到一组确定的超参，优化（训练集）成本函数到其最小值，最后比较多组超参各自优化后的（开发集）成本函数最小值，挑选出全局最小的那个。而早停法中，每一组超参，都还没有达到训练集成本函数最小值，就停止迭代了。\n",
+    "\n",
+    "![Early stopping](img/Early stopping.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
