--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -163,6 +163,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 配置优化问题\n",
+    "\n",
+    "### 3.1 标准化输入\n",
+    "\n",
+    "标准化的流程，对每个特征，减去特征的均值，再除以平方差（PPT里和视频中说除以方差，和习惯不一致，意义不明）。需要注意的点：对测试集进行标准化处理时，要使用训练集产生的均值和标准差。\n",
+    "\n",
+    "![Normalizing training sets](img/Normalizing training sets.png)\n",
+    "\n",
+    "对输入进行标准化，可以加快神经网络的训练过程。因为标准化后，成本函数的轮廓图会更像圆形，这样学习速率可以设置得相对大一点。\n",
+    "\n",
+    "![Why normalize inputs](img/Why normalize inputs.png)\n",
+    "\n",
+    "当输入的各个特征本身已经在同一量级的时候，标准化的帮助不太明显。但对输入特征使用标准化转换，也基本不会有负面影响，同时通常都会使算法训练更快。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
