vanishing and exploding gradients

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -182,6 +182,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 梯度消失和梯度爆炸\n",
+    "\n",
+    "以计算 $\\hat{y}$ 为例，假设权重矩阵为对角矩阵，截距向量为0向量。在神经网络非常深的时候，最终的预测结果也会是权重矩阵的对角值仅仅的指数幂。这个值略小于1，结果会无限趋于0。这个值略大于1，结果也会非常大。\n",
+    "\n",
+    "类似的分析，也可以用于梯度。当梯度非常大和梯度趋于0的时候，训练神经网络都是十分困难的。而这也是过去制约训练大型神经网络的一个重要因素。\n",
+    "\n",
+    "![vanishing and exploding gradients](img/vanishing and exploding gradients.png)\n",
+    "\n",
+    "我们无法完全消除梯度消失和梯度爆炸现象，但通过权重初始化的一些技巧，可以减轻这些现象。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
