weight initialization for deep networks

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -191,9 +191,18 @@
     "\n",
     "类似的分析，也可以用于梯度。当梯度非常大和梯度趋于0的时候，训练神经网络都是十分困难的。而这也是过去制约训练大型神经网络的一个重要因素。\n",
     "\n",
-    "![vanishing and exploding gradients](img/vanishing and exploding gradients.png)\n",
+    "![vanishing and exploding gradients](img/vanishing and exploding gradients.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 深度神经网络的权重初始化\n",
     "\n",
-    "我们无法完全消除梯度消失和梯度爆炸现象，但通过权重初始化的一些技巧，可以减轻这些现象。"
+    "我们无法完全消除梯度消失和梯度爆炸现象，但通过权重初始化的一些技巧，可以减轻这些现象。一个直觉上的观察是，如果某一层的神经元越多，那么我们希望相应的权重矩阵的元素值越小。下图给出了ReLU函数、Tanh函数的权重初始化公式，以及一个普遍适用的公式。\n",
+    "\n",
+    "![Single neuron example](img/Single neuron example.png)"
    ]
   },
   {
