numerical approximation of gradients

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -206,6 +206,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 梯度的数值逼近\n",
+    "\n",
+    "通过较小的值（非无穷小量），来对梯度进行数值逼近，作为对反向传播中梯度下降实现的一个辅助检查工具。\n",
+    "\n",
+    "![Checking your derivative computation](img/Checking your derivative computation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
