--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -217,6 +217,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 梯度检查\n",
+    "\n",
+    "![Gradient check for a neural network](img/Gradient check for a neural network.png)\n",
+    "\n",
+    "![Gradient checking](img/Gradient checking.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
