gradient checking implementation notes

--- a/Practical aspects of Deep Learning.ipynb
+++ b/Practical aspects of Deep Learning.ipynb
@@ -229,6 +229,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.6 梯度检查的实现细节\n",
+    "\n",
+    "![Gradient checking implementation notes](img/Gradient checking implementation notes.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
