Understanding mini-batch gradient descent

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -23,6 +23,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 理解微批梯度下降\n",
+    "\n",
+    "批量梯度下降的成本函数在每次迭代后是严格下降的，而对于微批梯度下降则不一定。只要学习速率合适，微批梯度下降的成本函数总体会呈现下降趋势。但由于每个批次中存在的噪声，有时成本函数也会上升。\n",
+    "\n",
+    "![Training with mini batch gradient descent](img/Training with mini batch gradient descent.png)\n",
+    "\n",
+    "如果批次大小等于样本大小，微批梯度下降就是批量梯度下降，批量梯度下降的每一次迭代需要很长的时间；如果批次大小等于1，这种情况下的微批梯度下降就是随机梯度下降，随机梯度下降损失了向量化提升效率的部分；微批梯度下降的每个批次都利用了向量化，同时每次批次的计算会比训练集全量计算快。\n",
+    "\n",
+    "![Choosing your mini-batch size](img/Choosing your mini-batch size.png)\n",
+    "\n",
+    "当样本量较小（m < 2000）时，建议使用批量梯度下降。使用微批梯度下降的典型批次是64,128,256,512。它们都是2的整数次幂，对于内存/显存来说更为友好。至于究竟是选用64还是512，则取决于单个批次能否在内存/显存中存储。\n",
+    "\n",
+    "![Choosing your mini-batch size2](img/Choosing your mini-batch size2.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
