Exponentially weighted averages

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -42,6 +42,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. 指数加权移动平均值\n",
+    "\n",
+    "指数加权移动平均值可以使数据的变化更为平缓。\n",
+    "$$ \n",
+    "\\begin{split}\n",
+    "V_0 &= 0 \\\\\n",
+    "V_t &= \\beta V_{t-1} + (1-\\beta)\\theta_t \\\\\n",
+    "\\end{split}\n",
+    "$$\n",
+    "上面这个变换之后的 $V_t$，可以看做是针对过去 $\\frac{1}{1-\\beta}$ 个单位 $\\theta$ 的平均值。这样，$\\beta$ 越接近 $1$，数据的变化就越平缓，曲线会向右偏（平均了更多天的数据）。\n",
+    "\n",
+    "![Exponentially weighted averages](img/Exponentially weighted averages.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
