--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -62,6 +62,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 理解指数加权移动平均值\n",
+    "\n",
+    "考虑偏差修正（bias correction）之后，$V_t$ 实际上可以看做是 $\\theta_1, \\theta_2, ..., \\theta_t$ 的指数加权。\n",
+    "\n",
+    "另外由于 $\\lim_{\\epsilon \\rightarrow 1}(1-\\epsilon)^{\\frac{1}{\\epsilon}} = \\frac{1}{e}$，所以令 $\\beta = 1 - \\epsilon$，$\\beta^{\\frac{1}{1-\\beta}} \\approx \\frac{1}{e}$。\n",
+    "\n",
+    "![Exponentially weighted averages 2](img\\Exponentially weighted averages 2.png)\n",
+    "\n",
+    "指数加权移动平均值，相比真正的平均值的一个优点，是其在实现的细节中，它可以写成迭代过程，每轮迭代只需要当前的 $\\theta_t$ 和上一轮迭代结果 $V_{t-1}$，占用的内存很少。同时它只是对均值的近似，从精度上并不能完美替代保留整个移动窗口计算平均值。由于节省内存以及相对不错的预测精度，指数加权移动平均值在机器学习中的应用非常广泛。\n",
+    "\n",
+    "![Implementing exponentially weighted averages](img\\Implementing exponentially weighted averages.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
