--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -79,6 +79,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. 偏差修正\n",
+    "\n",
+    "按照上述方法计算的指数加权移动平均值，并不是严格的指数加权。尤其因为 $V_0=0$，初始值的偏差会比较大。解决的方法是将公式修正为\n",
+    "$$ \\frac{V_t}{1-\\beta^t} = \\beta V_{t-1} + (1-\\beta)\\theta_t $$\n",
+    "\n",
+    "在机器学习的算法实现中，事实上很少有人会去做偏差修正。因为随着时间推移，后续的偏差值会越来越小。\n",
+    "\n",
+    "![Bias correction](img/Bias correction.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
