Gradient descent with momentum

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -93,6 +93,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 带有动量的梯度下降\n",
+    "\n",
+    "一句话概括带有动量的梯度下降算法：计算梯度的指数加权移动平均，通过这个值进行梯度更新。带有动量的梯度下降算法几乎总是比原版的梯度下降更快。带有动量的梯度下降算法会减小梯度下降过程中的震荡。\n",
+    "\n",
+    "![Gradient descent example](img/Gradient descent example.png)\n",
+    "\n",
+    "在某些机器学习的文献中会忽略 $1-\\beta$ 这一项。$\\beta$ 的值通常会固定为0.9，当然也可以当做超参来调节。\n",
+    "\n",
+    "![Momentum implementation details](img/Momentum implementation details.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
