--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -108,6 +108,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 7. RMSprop\n",
+    "\n",
+    "RMS的意思是**平方平均数 root mean square**。\n",
+    "\n",
+    "![RMSprop](img/RMSprop.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
