Adam optimization algorithm

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -121,6 +121,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 8. Adam\n",
+    "\n",
+    "机器学习发展的历程中，学者们发明过各种各样的优化算法，但绝大部分的优化算法都只能解决小一块领域的问题，不能做到普遍适用。很多研究人员都倾向于认为带有动量的梯度下降已经足够好了。而RMSprop和Adam可以说是优化算法中少有的，在深度学习中广泛适用的优化算法。\n",
+    "\n",
+    "**Adam(Adaptive moment estimation)**可以看做是一种结合了带有动量的梯度下降，和RMSprop的优化算法。其中适用动量梯度下降的过程中，会用到偏差修正。\n",
+    "\n",
+    "![Adam optimization algorithm](img/Adam optimization algorithm.png)\n",
+    "\n",
+    "Adam算法的超参当中，通常需要调的只有学习速率 $\\alpha$，$\\beta_1$ 和 $\\beta_2$ 可以调但更多情况下使用默认值就好，$\\epsilon$ 对结果几乎没有影响，但Adam论文的作者建议使用 $10^{-8}$。\n",
+    "\n",
+    "![Adam Hyperparameters choice](img/Adam Hyperparameters choice.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
