learning rate decay

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -140,6 +140,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 9. 学习速率衰减\n",
+    "\n",
+    "随着学习的过程，逐渐减小学习速率，有时可以让算法更快收敛。\n",
+    "\n",
+    "一种方法是设置衰减速率，令 $\\alpha = \\frac{1}{1+decayrate * epochnum}\\alpha_0$，这时 $decayrate$ 是另一个需要调节的超参。\n",
+    "\n",
+    "其它衰减方法还包括指数衰减、平反根衰减、离散阶梯衰减等。\n",
+    "\n",
+    "![Other learning rate decay methods](img/Other learning rate decay methods.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
