The problem of local optima

--- a/Optimization algorithms.ipynb
+++ b/Optimization algorithms.ipynb
@@ -157,6 +157,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. 局部极值的问题\n",
+    "\n",
+    "在深度学习发展的初期，人们非常担心优化算法陷入局部极值的问题。但随着理论的发展，对于局部极值点的理解也在不断地改变。一个极值点（梯度为0）成为局部极小值的必要条件是，这个点在各个维度上都是极小值。当我们训练大型神经网络，特征非常多，高维空间下，一个极值点是局部极小值的概率是很小的，更多情况下极值点都是**鞍点 Saddle Point**（在一些维度上是极大值，在一些维度上是极小值）\n",
+    "\n",
+    "![Local optima in neural networks](img/Local optima in neural networks.png)\n",
+    "\n",
+    "局部极小值不太会是深度学习的问题，但是平原问题可能是。平原会使优化算法变慢。面对这种情况，Adam之类的算法，通常会比梯度下降收敛得更快。\n",
+    "\n",
+    "![Problem of plateaus](img/Problem of plateaus.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
