Using an appropriate scale to pick hyperparameters

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -40,6 +40,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.2 使用合适的刻度来搜索超参\n",
+    "\n",
+    "上一节提到，随机挑选超参可以提高超参搜索的效率，但与此同时，随机抽样并不意味着随机均匀抽样。当超参搜索的范围量级变动较大时，使用合适的刻度来随机抽样十分重要。\n",
+    "\n",
+    "![Appropriate scale for hyperparameters](img/Appropriate scale for hyperparameters.png)\n",
+    "\n",
+    "![Hyperparameters for exponentially weighted averages](img/Hyperparameters for exponentially weighted averages.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
