--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -55,6 +55,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 超参调节实践：熊猫策略 vs 鱼子酱策略\n",
+    "\n",
+    "不同类型的问题，超参通常都是重新调节的；即使对于同一个问题，随着时间推移，新的数据进入训练集，时不时对模型表现进行评估并重新搜索超参也是十分必要的。\n",
+    "\n",
+    "取决于所拥有的计算资料，调节超参也包含串行和并行两种策略。\n",
+    "\n",
+    "![Pandas vs Caviar](img/Pandas vs Caviar.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
