Normalizing activations in a network

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -68,6 +68,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 批量标准化\n",
+    "\n",
+    "### 2.1 对神经网络中的激活值进行标准化\n",
+    "\n",
+    "批量标准化可以使超参搜索更容易，使神经网络模型更健壮，也使得训练更深的神经网络更为容易。批量标准化的起源，是当我们对输入进行标准化后，训练过程会更快。基于同样的原因，如果对每个隐藏层的激活值也进行标准化，那么训练过程会不会进一步加快？但在技术实现中，**实际情况更多是对线性组合的Z值进行标准化，而非激活值**。\n",
+    "\n",
+    "![Normalizing inputs to speed up learning](img/Normalizing inputs to speed up learning.png)\n",
+    "\n",
+    "批量标准化，并不像对输入的处理，将其都标准化为均值0，标准差1，而是允许不同的均值和标准差。这个是通过 $\\gamma$ 和 $\\beta$ 这两个值来控制的，这两个值像权重一样，是模型可以学习得到的。\n",
+    "\n",
+    "![Implementing Batch Norm](img/Implementing Batch Norm.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
