Fitting Batch Norm into a neural network

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -85,6 +85,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 将批量标准化应用到神经网络中\n",
+    "\n",
+    "![Adding Batch Norm to a network](img/Adding Batch Norm to a network.png)\n",
+    "\n",
+    "批量标准化通常和微批梯度下降一起使用。另外，在使用了批量标准化之后，参数 $b$ 实际上可以去除了。\n",
+    "\n",
+    "![Working with mini-batches](img/Working with mini-batches.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
