Why does Batch Norm work

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -98,6 +98,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 2.3 理解批量标准化\n",
+    "\n",
+    "1. 和对输入进行标准化一样，可以加快模型训练速度。\n",
+    "\n",
+    "2. 能更好地应对数据集输入分布的偏移。这种偏移，术语叫做covariate shift。它描述的是，算法已经学到了从X到Y的映射关系，当输入X的分布发生变化，我们可能需要重新训练模型。不论X->Y的真实函数没有发生变化，重新训练模型都是必要的。\n",
+    "![Learning on shifting input distribution](img/Learning on shifting input distribution.png)\n",
+    "![Why this is a problem with neural network](img/Why this is a problem with neural network.png)\n",
+    "\n",
+    "3. 类似于Dropout，批量标准化同时也起到正则化的效果。（但不要将其作为正则化的手段来用）\n",
+    "![Batch Norm as regularization](img/Batch Norm as regularization.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
