Batch Norm at test time

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -116,6 +116,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 针对测试集的批量标准化\n",
+    "\n",
+    "批量标准化在训练过程中，每次处理一个微批。而在针对测试集进行预测的时候，可能会需要对单个样本进行计算，这时会缺少微批的均值和方差。我们需要单独预测均值和方差。可以使用各个批次的均值和方差，使用指数加权移动平均的方式，来进行预测。\n",
+    "\n",
+    "![Batch Norm at test time](img/Batch Norm at test time.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
