--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -127,6 +127,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 多元分类"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Softmax回归\n",
+    "\n",
+    "Softmax回归是Logistic回归的推广形式，可以用来处理多元分类问题。将神经网络最后一层，替换为Softmax回归层，即可进行多元分类。\n",
+    "\n",
+    "![Recognizing cats, dogs, and baby chicks](img/Recognizing cats, dogs, and baby chicks.png)\n",
+    "\n",
+    "Softmax回归本身的决策边界是线性的。\n",
+    "\n",
+    "![Softmax examples](img/Softmax examples.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
