Training a softmax classifier

--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -149,6 +149,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 训练Softmax分类器\n",
+    "\n",
+    "Softmax的概念是和Hardmax对应的，Hardmax会产出一个类似[1, 0, 0, 0]的向量，而Softmax产生的向量，是和为1的概率表述向量。\n",
+    "\n",
+    "Softmax的损失函数，反向传播，略。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
