--- a/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
+++ b/Hyperparameter tuning, Batch Normalization and Programming Frameworks.ipynb
@@ -178,6 +178,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 4.2 Tensorflow\n",
+    "\n",
+    "略"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
